--- a/index.html
+++ b/index.html
@@ -148,9 +148,12 @@
         <section class="activity-section">
             <h2>📸 晒单返佣</h2>
             <ul>
-                <li>空调指定型号：返佣38-500元/台</li>
-                <li>雷鸟电视：返佣18-100元/台</li>
+                <li>TCL电视：返佣18元/台</li>
+                <li>空调：返佣38-500元/台</li>
+                  <li>门锁：返佣88-118元/台</li>
+                <li>雷鸟电视：返佣38元/台</li>
                 <li>乐华电视：返佣50元/台</li>
+  <li>指定型号可参加，详情点击查看活动完整细则或扫码二维码</li>
             </ul>
         </section>
 
@@ -159,6 +162,11 @@
             <h2>📺 直播福利</h2>
             <p>周一至周五 18:00-20:00<br>
             参与互动抽88-128元红包</p>
+        </section>
+          <section class="activity-section">
+            <h2>🎉免费安装</h2>
+            <p>TCL电视98英寸以上首次安装免费，免费提供安装调试服务(座装或挂装);<br>
+            TCL电视、雷鸟电视指定型号免基础安装。</p>
         </section>
 
         <!-- 模态框 -->
@@ -182,7 +190,7 @@
         window.onclick = function(event) {
             const modal = document.getElementById('detailModal');
             if (event.target == modal) {
-                modal.style.display = "none";
+                modal.style.display = "none";      
             }
         }
     </script>
