--- a/index.html
+++ b/index.html
@@ -164,21 +164,22 @@
             参与互动抽88-128元红包</p>
         </section>
           <section class="activity-section">
-            <h2>🎉免费安装</h2>
+            <h2>🆓免费安装</h2>
             <p>TCL电视98英寸以上首次安装免费，免费提供安装调试服务(座装或挂装);<br>
             TCL电视、雷鸟电视指定型号免基础安装。</p>
         </section>
-
+<!-- 在 </body> 标签之前添加长图 -->
+<img src="99673295868dd3a1e06bc3a4bcc7a3a.jpg" alt="活动政策详情" style="width:100%; height:auto;">
         <!-- 模态框 -->
         <div id="detailModal" class="modal">
             <div class="modal-content">
-                <img src="99673295868dd3a1e06bc3a4bcc7a3a.jpg" 
+                <img src="addme.jpg" 
                      alt="活动详情" 
                      style="width:100%;height:auto;">
             </div>
         </div>
 
-        <button onclick="showModal()" class="view-detail-btn">查看完整活动细则</button>
+        <button onclick="showModal()" class="view-detail-btn">🤝如有业务咨询事项，点击咨询TCL社群管理员🤝</button>
     </div>
 
     <script>
@@ -191,8 +192,7 @@
             const modal = document.getElementById('detailModal');
             if (event.target == modal) {
                 modal.style.display = "none";      
-            }
-        }
+         
     </script>
 </body>
 </html>
