--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body>
     <div class="container">
         <div class="header">
-            <img src="99673295868dd3a1e06bc3a4bcc7a3a.png" alt="TCL之家" class="brand-logo">
+            <img src="活动KV.jpg" alt="TCL之家" class="brand-logo">
             <h1 class="title">4月社群专属活动</h1>
             <div class="time">活动时间：2025年4月1日-4月30日</div>
         </div>
@@ -71,7 +71,7 @@
         <!-- 模态框 -->
         <div id="detailModal" class="modal">
             <div class="modal-content">
-                <img src="99673295868dd3a1e06bc3a4bcc7a3a.jpg" 
+                <img src="4月政策.jpg" 
                      alt="活动详情" 
                      style="width:100%;height:auto;">
             </div>
