--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                     <tr><td>第101-300名</td><td>188元</td></tr>
                 </tbody>
             </table>
-            <p>参与条件：仅限24年/25年年累销售金额≥5万的用户参与；当月销售两个品类以上且销售金额≥2万</p>
+            <p>参与条件：仅限24年全年/25年1-3月累积销售金额≥5万的用户参与；当月销售两个品类以上且销售金额≥2万</p>
         </section>
 
         <!-- 晒单福利模块 -->
