--- a/index.html
+++ b/index.html
@@ -167,6 +167,13 @@
                 <p>• 免基础安装费（含3米管线）</p>
             </div>
         </section>
+    </div>           
+        <!-- 新增5月政策图片 -->
+        <img src="5月政策.jpg" alt="5月政策活动详情" class="responsive-img" loading="lazy">
+        
     </div>
+</body>
+</html>
+
 </body>
 </html>
